[GTK] Fix scrollbars size with GTK+ 3.x https://bugs.webkit.org/show_bug.cgi?id=75467

Reviewed by Xan Lopez.

* platform/gtk/RenderThemeGtk3.cpp:
(WebCore::getStyleContext): Add the style class for the given
widget type to the GtkWidgetPath when creating GtkStyleContext
objects.

Canonical link: https://commits.webkit.org/92233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103936 268f45cc-cd09-0410-ab3c-d52691b4dbfc